--- a/scss/style.scss
+++ b/scss/style.scss
@@ -65,6 +65,19 @@ $color_light_blue: #54cff0;
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-left: -0.6rem;
+}
+
+.header-dashed {
+  border-left: 1.4px dashed #d0e2f8;
+  margin-left: 0.2rem;
+  height: 4rem;
+  width: 1rem;
+  font-size: 2rem;
+}
+
+.header-dashed:nth-of-type(2) {
+  font-size: 4rem;
 }
 
 .people-img {
@@ -219,6 +232,7 @@ $color_light_blue: #54cff0;
 
 .background-company {
   background: #e6f1ff;
+  border-bottom-left-radius: 3.5rem;
 }
 
 ul {
@@ -227,4 +241,209 @@ ul {
   margin-inline-start: 0;
   margin-inline-end: 0;
   padding-inline-start: 0.5em;
+}
+
+/*========================
+        BLOCK 4
+   ======================*/
+
+.elipse {
+  color: $color_light_blue;
+  border: 1.3px solid $color_light_blue;
+  border-radius: 50%;
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-weight: 500;
+}
+
+.dashed {
+  border-left: 1.4px dashed #d0e2f8;
+  margin-left: 0.9rem;
+  height: 4rem;
+  width: 1rem;
+  font-size: 4rem;
+}
+.dashed:nth-of-type(8) {
+  font-size: 1rem;
+}
+
+.violet_checkmark {
+  width: 0.7rem;
+  height: 0.9rem;
+  display: flex;
+  padding-left: 0.2rem;
+}
+
+.skill-background {
+  background: #e6f1ff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 2.6rem;
+}
+.skill-img {
+  width: 4rem;
+  height: 4rem;
+}
+
+.text-skill {
+  color: #9ca6ae;
+  font-size: 0.71rem;
+}
+
+.box-shadow {
+  box-shadow: -2px 0 5px #caced1;
+  border-bottom-left-radius: 2rem;
+  border-top-right-radius: 2rem;
+}
+
+.grad-blue {
+  background-image: linear-gradient(0deg, #3754e4, #53ccf0);
+  border-top-right-radius: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  width: 2%;
+  padding: 0;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
+.transform {
+  transform: rotate(-90deg);
+  display: inline-block;
+  // position: absolute;
+  // bottom: 45%;
+  // left: -45%;
+}
+
+/*========================
+        BLOCK 5
+   ======================*/
+.block5-content {
+  background-image: url(../img/background5.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.people-block5 {
+  width: 95%;
+  height: 95%;
+}
+
+.text-prior {
+  line-height: 1.6;
+  font-weight: 650;
+}
+
+.colortext {
+  color: $color_violet;
+}
+
+.picture-block5 {
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.box-shadow-block5 {
+  box-shadow: 0 0 10px #caced1;
+  border-bottom-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+  background: #fff;
+  width: 6rem;
+  height: 6rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-block5 {
+  color: #9ca6ae;
+  font-size: 0.65rem;
+  text-align: center;
+}
+
+/*========================
+        BLOCK 6
+   ======================*/
+.block6-content {
+  background-image: url(../img/background6.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.backgroud-block6 {
+  background: #e6f1ff;
+  border-bottom-left-radius: 3rem;
+}
+
+%general-components {
+  background: #e6f1ff;
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 650;
+  border-top-right-radius: 3rem;
+}
+
+.basic {
+  color: #3652e4;
+  @extend %general-components;
+}
+
+.img-price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+  background: #fff;
+  border-top-right-radius: 3rem;
+}
+
+.price {
+  width: 5.4rem;
+  height: 1.8rem;
+}
+
+.text-block6 {
+  background: #fff;
+  text-align: center;
+  font-size: 0.7rem;
+  line-height: 2;
+  font-weight: 500;
+  border-bottom-left-radius: 3rem;
+}
+
+.basic-bottom {
+  background-image: linear-gradient(90deg, #3654e4, #54cdf0);
+}
+
+.standart {
+  color: #04b669;
+  @extend %general-components;
+}
+
+.premium {
+  color: #8e39f0;
+  @extend %general-components;
+}
+
+.standart-bottom {
+  background-image: linear-gradient(90deg, #0fbf72, #4ed57b);
+  border-color: #4ed57b;
+}
+
+.premium-bottom {
+  background-image: linear-gradient(90deg, #822fed, #bb5ef9);
+  border-color: #bb5ef9;
+}
+
+.crossed-out {
+  color: #c2c8cc;
+  text-decoration: line-through;
 }
