--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,557 +1,19 @@
-.container {
-  width: 68%;
+@import "header/layout.scss";
+@import "block2/layout.scss";
+@import "block3/layout.scss";
+@import "block4/layout.scss";
+@import "block5/layout.scss";
+@import "block6/layout.scss";
+@import "block7/layout.scss";
+@import "footer/layout.scss";
+@import "contact/layout.scss";
+
+@font-face {
+  font-family: 'San Francisco Pro';
+  src: local('San Francisco Pro Display Thin'), local('San-Francisco-Pro-Display-Thin'),
+      url('SFProDisplay-Thin.woff2') format('woff2'),
+      url('SFProDisplay-Thin.woff') format('woff'),
+      url('SFProDisplay-Thin.ttf') format('truetype');
+  font-weight: 100;
+  font-style: normal;
 }
-
-$color_violet: #3652e4;
-$color_light_blue: #54cff0;
-
-.universal-h5 {
-  font-weight: bold;
-  text-transform: uppercase;
-  text-align: center;
-  padding-bottom: 0.7rem;
-}
-
-/*========================
-        HEADER BLOCK
-   ======================*/
-
-.header-content {
-  display: block;
-  background-image: url(../img/topleftbackground.png);
-  background-size: 47%;
-  background-repeat: no-repeat;
-  background-position: top right;
-
-  a:hover {
-    text-decoration: none;
-  }
-
-  hr {
-    border-top: 2.5px solid $color_violet;
-  }
-}
-
-.logo-img {
-  width: 1.5rem;
-  height: 2rem;
-}
-
-.logo {
-  font-weight: 500;
-  color: black;
-  font-size: 1.3rem;
-}
-.menu {
-  font-size: 0.7rem;
-  color: white;
-}
-
-.text-raise {
-  color: $color_violet;
-  text-transform: uppercase;
-  margin-bottom: 1.5rem;
-  margin-top: 2rem;
-  font-weight: bold;
-}
-
-.circle-blue {
-  border-radius: 50%;
-  background: $color_light_blue;
-  width: 0.5rem;
-  height: 0.5rem;
-  display: block;
-}
-
-.circ-checkmark {
-  background-color: $color_violet;
-  border-radius: 50%;
-  width: 1.7rem;
-  height: 1.7rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-left: -0.6rem;
-}
-
-.header-dashed {
-  border-left: 1.4px dashed #d0e2f8;
-  margin-left: 0.2rem;
-  height: 4rem;
-  width: 1rem;
-  font-size: 2rem;
-}
-
-.header-dashed:nth-of-type(2) {
-  font-size: 4rem;
-}
-
-.people-img {
-  background-image: url(../img/people1.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.text-virtual {
-  font-size: 0.8rem;
-  color: #6d7e8a;
-}
-
-.text-checkmark {
-  font-size: 0.8rem;
-}
-
-.btn-primary {
-  background-color: $color_light_blue;
-  border-color: $color_light_blue;
-  border-radius: 1.5rem;
-  font-size: 0.7rem;
-  font-weight: 500;
-  text-transform: uppercase;
-}
-
-/*========================
-        BLOCK 2
-   ======================*/
-
-.block2-content {
-  background-image: url(../img/background2.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.block2-padding {
-  padding-top: 7rem;
-}
-
-.text-networking {
-  font-size: 0.7rem;
-  color: #6d7e8a;
-  text-align: center;
-}
-
-.text-set-up {
-  color: $color_violet;
-  font-weight: bold;
-  text-align: center;
-  padding-bottom: 1rem;
-}
-
-/*========================
-        BLOCK 3
-   ======================*/
-
-.block3-content {
-  background-image: url(../img/background3.png);
-  background-repeat: no-repeat;
-  background-size: 100% 96%;
-
-  hr {
-    border-top: 1.5px solid #85aef3;
-  }
-}
-
-.block3-padding {
-  padding-top: 3rem;
-}
-
-.text-being {
-  font-size: 0.65rem;
-  color: #ffffff;
-  text-align: center;
-}
-
-.border-office {
-  border-bottom: 4px solid $color_light_blue;
-  border-radius: 0.15rem;
-}
-
-.nav-tabs .nav-link {
-  border-top-right-radius: 1.5rem;
-  border-top-left-radius: 0;
-  background-color: #e6f1ff;
-  color: black;
-  text-transform: uppercase;
-  font-size: 0.65rem;
-  font-weight: 600;
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-  margin-right: 0.3rem;
-}
-
-.nav-tabs .nav-item {
-  text-align: center;
-  margin-bottom: -3.6px;
-  width: 23%;
-}
-
-.nav-social {
-  background: #ffffff;
-  border-bottom-left-radius: 3.5rem;
-  margin-left: 0%;
-  margin-right: 0%;
-
-  img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-.text-same-page {
-  color: #6d7e8a;
-  font-size: 0.73rem;
-  padding-top: 0.5rem;
-}
-
-.list {
-  list-style: none;
-}
-
-.li-checkmark {
-  border-radius: 50%;
-  width: 1rem;
-  height: 1rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.text-the-company {
-  color: #000000;
-  font-size: 0.75rem;
-  padding-top: 0.5rem;
-  font-weight: 600;
-}
-
-.general-office {
-  width: 100%;
-  margin-bottom: 7rem;
-}
-
-.background-company {
-  background: #e6f1ff;
-  border-bottom-left-radius: 3.5rem;
-}
-
-ul {
-  margin-block-start: 0;
-  margin-block-end: 0;
-  margin-inline-start: 0;
-  margin-inline-end: 0;
-  padding-inline-start: 0.5em;
-}
-
-/*========================
-        BLOCK 4
-   ======================*/
-
-.elipse {
-  color: $color_light_blue;
-  border: 1.3px solid $color_light_blue;
-  border-radius: 50%;
-  width: 2rem;
-  height: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-weight: 500;
-}
-
-.dashed {
-  border-left: 1.4px dashed #d0e2f8;
-  margin-left: 0.9rem;
-  height: 4rem;
-  width: 1rem;
-  font-size: 4rem;
-}
-.dashed:nth-of-type(8) {
-  font-size: 1rem;
-}
-
-.violet_checkmark {
-  width: 0.7rem;
-  height: 0.9rem;
-  display: flex;
-  padding-left: 0.2rem;
-}
-
-.skill-background {
-  background: #e6f1ff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 2.6rem;
-}
-.skill-img {
-  width: 4rem;
-  height: 4rem;
-}
-
-.text-skill {
-  color: #9ca6ae;
-  font-size: 0.71rem;
-}
-
-.box-shadow {
-  box-shadow: -2px 0 5px #caced1;
-  border-bottom-left-radius: 2rem;
-  border-top-right-radius: 2rem;
-}
-
-.grad-blue {
-  background-image: linear-gradient(0deg, #3754e4, #53ccf0);
-  border-top-right-radius: 2rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  width: 2%;
-  padding: 0;
-  text-transform: uppercase;
-  font-size: 0.8rem;
-  font-weight: 600;
-}
-
-.transform {
-  transform: rotate(-90deg);
-  display: inline-block;
-  // position: absolute;
-  // bottom: 45%;
-  // left: -45%;
-}
-
-/*========================
-        BLOCK 5
-   ======================*/
-.block5-content {
-  background-image: url(../img/background5.png);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-
-.people-block5 {
-  background-image: url(../img/people_block5.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.text-prior {
-  line-height: 1.6;
-  font-weight: 650;
-}
-
-.colortext {
-  color: $color_violet;
-}
-
-.picture-block5 {
-  width: 2.5rem;
-  height: 2.5rem;
-}
-
-.box-shadow-block5 {
-  box-shadow: 0 0 10px #caced1;
-  border-bottom-left-radius: 1.5rem;
-  border-top-right-radius: 1.5rem;
-  background: #fff;
-  width: 6rem;
-  height: 6rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.text-block5 {
-  color: #9ca6ae;
-  font-size: 0.65rem;
-  text-align: center;
-}
-
-
-.nav-icon-shadow{
-  box-shadow: 0 0 20px #000000;
-}
-
-/*========================
-        BLOCK 6
-   ======================*/
-.block6-content {
-  background-image: url(../img/background6.png);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-}
-
-.backgroud-block6 {
-  background: #e6f1ff;
-  border-bottom-left-radius: 3rem;
-  border-top-right-radius: 3rem;
-}
-
-%general-components {
-  background: #e6f1ff;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: 650;
-  border-top-right-radius: 3rem;
-}
-
-.basic {
-  color: #3652e4;
-  @extend %general-components;
-}
-
-.img-price {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem 0;
-  background: #fff;
-  border-top-right-radius: 3rem;
-}
-
-.price {
-  width: 5.4rem;
-  height: 1.8rem;
-}
-
-.text-block6 {
-  background: #fff;
-  text-align: center;
-  font-size: 0.7rem;
-  line-height: 2;
-  font-weight: 500;
-  border-bottom-left-radius: 3rem;
-}
-
-.basic-bottom {
-  background-image: linear-gradient(90deg, #3654e4, #54cdf0);
-}
-
-.standart {
-  color: #04b669;
-  @extend %general-components;
-}
-
-.premium {
-  color: #8e39f0;
-  @extend %general-components;
-}
-
-.standart-bottom {
-  background-image: linear-gradient(90deg, #0fbf72, #4ed57b);
-  border-color: #4ed57b;
-}
-
-.premium-bottom {
-  background-image: linear-gradient(90deg, #822fed, #bb5ef9);
-  border-color: #bb5ef9;
-}
-
-.crossed-out {
-  color: #c2c8cc;
-  text-decoration: line-through;
-}
-
-/*========================
-        BLOCK 7
-   ======================*/
-
-.picture-block7 {
-  background-image: url(../img/picture_block7.png);
-  background-repeat: no-repeat;
-  background-size: contain;
-}
-
-.text-p2-block7 {
-  font-size: 0.65rem;
-  color: #6d7e8a;
-}
-
-.text-p-block7 {
-  font-size: 1vw;
-  color: #fff;
-  font-weight: 600;
-  padding-left: 1.9rem;
-  padding-top: 5rem;
-  line-height: 1.4;
-}
-
-.epigraph {
-  font-size: 0.78vw;
-  color: #fff;
-}
-
-.company-values {
-  text-transform: uppercase;
-  font-size: 0.8rem;
-}
-
-.h6-for-block7 {
-  text-transform: uppercase;
-  font-size: 0.73rem;
-}
-
-.icon-block7 {
-  width: 3.5vw;
-  height: 3.4vw;
-}
-
-.box-shadow-block7 {
-  box-shadow: 0 0 5px #caced1;
-  border-bottom-left-radius: 3.5rem;
-  border-top-right-radius: 3.5rem;
-}
-
-.our-mission {
-  color: $color_violet;
-  text-align: center;
-  font-size: 0.9rem;
-}
-
-.line {
-  border: 0.5px solid $color_violet;
-  background: $color_violet;
-  display: inline-flex;
-  width: 1rem;
-  margin-left: 12.2rem;
-}
-
-/*========================
-        FOOTER
-   ======================*/
-   .footer {
-    background-image: url(../img/background_footer.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-  }
-
-  .picture-footer {
-    background-image: url(../img/picture_footer.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-  }
-
-  .form-control{
-    border-radius: 1.6rem;
-    box-shadow: 0 0 8px #caced1;
-    border: 1px solid white;
-  }
-
-  /*========================
-        CONTACT
-   ======================*/
-
-   .contact{
-    background-image: url(../img/bg_footer.png);
-    background-repeat: no-repeat;
-    background-size: 100% 100%;
-   }
-
-   .text-contact{
-     font-size: 0.8rem;
-     color: #9ca6ae;
-     text-align: right;
-   }
