--- a/scss/contact/layout.scss
+++ b/scss/contact/layout.scss
@@ -8,7 +8,8 @@
 .contact {
   background-image: url(../img/bg_footer.png);
   background-repeat: no-repeat;
-  background-size: 100% 100%;
+  background-size: contain;
+  background-color: #f2f7fd;
 }
 
 .text-contact {
