--- a/scss/block4/layout.scss
+++ b/scss/block4/layout.scss
@@ -76,7 +76,29 @@
 .transform {
   transform: rotate(-90deg);
   display: inline-block;
-  // position: absolute;
-  // bottom: 45%;
-  // left: -45%;
+}
+
+@media screen and (max-width: 768px) {
+  .block4-col1{
+    display: none;
+  }
+
+  .transform {
+    transform: rotate(0deg);
+    // display: inline-block;
+  }
+
+  .grad-blue {
+    background-image: linear-gradient(0deg, #3754e4, #53ccf0);
+    border-top-right-radius: 0rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #fff;
+    width: 100%;
+    margin: 0.2rem 0;
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    font-weight: 600;
+}
 }
