--- a/scss/block5/layout.scss
+++ b/scss/block5/layout.scss
@@ -6,9 +6,10 @@
 @import "../variables.scss";
 
 .block5-content {
-  background-image: url(../img/background5.png);
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
+  // background-image: url(../img/background5.png);
+  // background-repeat: no-repeat;
+  // background-size: 100% 100%;
+  background-color: #f2f7fd;
 }
 
 
