--- a/scss/block6/layout.scss
+++ b/scss/block6/layout.scss
@@ -73,3 +73,8 @@
   color: #c2c8cc;
   text-decoration: line-through;
 }
+
+.padding-col-block6 {
+  padding: 0rem 3rem;
+  padding-bottom: 6rem;
+}
