--- a/scss/block7/layout.scss
+++ b/scss/block7/layout.scss
@@ -64,3 +64,10 @@
 .line {
   border-bottom: 2px solid $color_violet;
 }
+
+// @media screen and (max-width: 768px) {
+//   .picture-block7 {
+//     display: none;
+//   }
+// }
+
